rename to fleur

--- a/README.qmd
+++ b/README.qmd
@@ -3,3 +3,23 @@ format: gfm
 ---
 
 <!-- Automatically generated, uses README.qmd to modify README.md -->
+
+**`fleur` is currently a work in progress.**
+
+fleur is basically [ggstatsplot](https://indrajeetpatil.github.io/ggstatsplot/index.html), but for Python.
+
+The goal behind fleur is:
+
+- combine statistics with data visualization
+- pretty plots by default
+- dataframe agnostic thanks to [narwhals](https://narwhals-dev.github.io/narwhals/)
+
+<br><br>
+
+## Miscellaneous
+
+- requires python 3.10
+- names idea:
+   - sunpie
+   - goldenpie
+   - fleur
