--- a/README.qmd
+++ b/README.qmd
@@ -12,14 +12,39 @@ The goal behind fleur is:
 
 - combine statistics with data visualization
 - pretty plots by default
-- dataframe agnostic thanks to [narwhals](https://narwhals-dev.github.io/narwhals/)
+- detailed statistical results
 
 <br><br>
 
 ## Miscellaneous
 
 - requires python 3.10
-- names idea:
-   - sunpie
-   - goldenpie
-   - fleur
+
+<br><br>
+
+## State
+
+```{python}
+# | echo: false
+
+from great_tables import GT
+import pandas as pd
+
+
+df = pd.DataFrame(
+    {
+        "Functions": ["BetweenStats()", "ScatterStats()"],
+        "Description": [
+            "Between group/condition comparisons",
+            "Correlation between two variables",
+        ],
+        "Parametric": ["✅", "✅"],
+        "Non-parametric": ["❌", "❌"],
+        "Robust": ["❌", "❌"],
+        "Bayesian": ["❌", "❌"],
+    }
+)
+
+GT(df).cols_align("center")
+
+```
