--- a/docs/README.qmd
+++ b/docs/README.qmd
@@ -1,17 +1,17 @@
-# Correlation
-
+---
+format: gfm
+---
 
 <!-- Automatically generated, uses README.qmd to modify README.md -->
 
 ![Coverage](coverage-badge.svg)
 
+
 # `fleur`: stats and plots holding hands
 
-`fleur` provides a set of tools to combine data visualization with
-statistics.
+`fleur` provides a set of tools to combine data visualization with statistics.
 
-> fleur is still in a very early stage and in beta version: expect
-> regular breaking changes.
+> fleur is still in a very early stage and in beta version: expect regular breaking changes.
 
 [Documentation website](https://y-sunflower.github.io/fleur/)
 
@@ -21,7 +21,7 @@ statistics.
 
 ### Group comparison
 
-``` python
+```{python}
 from fleur import BetweenStats
 from fleur import datasets
 
@@ -30,9 +30,9 @@ df = datasets.load_iris()
 fig = BetweenStats(df["sepal_length"], df["species"]).plot()
 ```
 
-![](README_files/figure-commonmark/cell-2-output-1.png)
+### Correlation
 
-``` python
+```{python}
 from fleur import ScatterStats
 from fleur import datasets
 
@@ -41,13 +41,11 @@ df = datasets.load_iris()
 fig = ScatterStats(df["sepal_length"], df["sepal_width"]).plot()
 ```
 
-![](README_files/figure-commonmark/cell-3-output-1.png)
-
 <br><br>
 
 ## Installation
 
-``` bash
+```bash
 pip install fleur
 ```
 
