refacto scattersatst + rename to data + type hint

--- a/docs/README.qmd
+++ b/docs/README.qmd
@@ -39,7 +39,7 @@ fig.savefig("img/quickstart-scatterstats.png", dpi=200)
 ```{python}
 # | output: false
 from fleur import BetweenStats
-from fleur import datasets
+from fleur import data
 
 df = datasets.load_iris()
 
@@ -53,7 +53,7 @@ BetweenStats(df["sepal_length"], df["species"]).plot()
 ```{python}
 # | output: false
 from fleur import ScatterStats
-from fleur import datasets
+from fleur import data
 
 df = datasets.load_iris()
 
