--- a/docs/README.qmd
+++ b/docs/README.qmd
@@ -19,12 +19,16 @@ fig.savefig("img/quickstart-scatterstats.png", dpi=200)
 ```
 
 
+# `fleur`: combining statistics with visualization
 
-# `fleur`: stats and plots holding hands
+<img src="https://github.com/JosephBARBIERDARNAL/static/blob/main/python-libs/fleur/image.png?raw=true" alt="fleur logo" align="right" width="150px"/>
 
-`fleur` provides a set of tools to combine data visualization with statistics.
+With `fleur` (_pronounced "flur"_), statistics and data visualization are done at the same time. It's meant as a modern tool for highly detailed statistical annotations in plots with high customization capabilities.
 
-> fleur is still in a very early stage and in beta version: expect regular breaking changes.
+It's lightweight in the sense that it only requires foundational libraries: `matplotlib`, `scipy` and `narwhals`. Learn more [about fleur](./about.md).
+
+> [!WARNING]
+> fleur is still in a very early stage: expect regular breaking changes.
 
 [Documentation website](https://y-sunflower.github.io/fleur/)
 
